# airqc

./: .gitignore  Cargo.toml  build.rs  flash.gdb  memory.x  rust-toolchain.toml
.cargo/: config.toml
src/: fsmc.rs  hp206c.rs  index.html  ism43362.rs  main.rs  network.rs  scd30.rs  sgp30.rs
